ders17-security/lab3-waf/ingress-no-waf.yaml
# Lab 3 — Adım 1: WAF KAPALI.
# SQLi/XSS/path traversal saldırıları doğrudan order-svc'ye ulaşır.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: security-lab
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 8001
